syntax = "proto3";

package product;

service ProductService {
  rpc AddProduct(AddProductRequest) returns (AddProductResponse);
  rpc UpdateProduct(UpdateProductRequest) returns (UpdateProductResponse);
  rpc DeleteProduct(DeleteProductRequest) returns (DeleteProductResponse);
  rpc GetProduct(GetProductRequest) returns (GetProductResponse);
  rpc GetProductsByIds(GetProductsByIDsRequest) returns (GetProductsByIDsResponse);
  rpc ListProducts(ListProductsRequest) returns (ListProductsResponse);
  rpc CheckAvailability(CheckAvailabilityRequest) returns (CheckAvailabilityResponse);
  rpc UpdateInventory(UpdateInventoryRequest) returns (UpdateInventoryResponse);
}

message Product {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock_quantity = 5;
  string category = 6;
  int64 created_at = 7;
  int64 updated_at = 8;
}

message AddProductRequest {
  string name = 1;
  string description = 2;
  double price = 3;
  int32 stock_quantity = 4;
  string category = 5;
}

message AddProductResponse {
  bool success = 1;
  string message = 2;
  string product_id = 3;
}

message UpdateProductRequest {
  string product_id = 1;
  string name = 2;
  string description = 3;
  double price = 4;
  int32 stock_quantity = 5;
  string category = 6;
}

message UpdateProductResponse {
  bool success = 1;
  string message = 2;
  Product product = 3;
}

message DeleteProductRequest {
  string product_id = 1;
}

message DeleteProductResponse {
  bool success = 1;
  string message = 2;
}

message GetProductRequest {
  string product_id = 1;
}

message GetProductResponse {
  bool success = 1;
  string message = 2;
  Product product = 3;
}

message GetProductsByIDsRequest {
  repeated string product_ids = 1;
}

message GetProductsByIDsResponse {
  repeated Product products = 3;
}

message ListProductsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string category = 3;
}

message ListProductsResponse {
  bool success = 1;
  string message = 2;
  repeated Product products = 3;
  int32 total_count = 4;
}

message CheckAvailabilityRequest {
  string product_id = 1;
  int32 quantity = 2;
}

message CheckAvailabilityResponse {
  bool available = 1;
  string message = 2;
  int32 current_stock = 3;
}

message UpdateInventoryRequest {
  string product_id = 1;
  int32 quantity_change = 2; // positive for increase, negative for decrease
}

message UpdateInventoryResponse {
  bool success = 1;
  string message = 2;
  int32 new_stock_quantity = 3;
}
